--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -54,10 +54,10 @@ jobs:
           oc_version: '4.6'
       
   login:
-    name: OpenShift Login and Test
     runs-on: ubuntu-20.04
-
-    steps:
+    needs: Oc-openshift-Install
+    if: ${{ success() }}
+    steps: 
       - uses: actions/checkout@v4
 
       - name: Log in and set context
