--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -70,7 +70,7 @@ jobs:
 
           # Credentials, if desired instead of token.
           # Username and password override token if they are set.
-          openshift_username: ${{ secrets.OPENSHIFT_USER }}
+          openshift_username: ${{ secrets.TEST_USER }}
           openshift_password: ${{ secrets.OPENSHIFT_PASSWORD }}
 
           # Disables SSL cert checking. Use this if you don't have the certificate authority data.
