--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -59,6 +59,10 @@ jobs:
     if: ${{ success() }}
     
     steps:
+      - name: Add hosts to /etc/hosts
+        run: |
+            sudo echo "64.23.160.96 api.crc.testing oauth-openshift.apps-crc.testing console-openshift-console.apps-crc.testing default-route-openshift-image-registry.apps-crc.testing flex-route-flex.apps-crc.testing downloads-openshift-console.apps-crc" | sudo tee -a /etc/hosts
+            
       - name: Authenticate and set context
         uses: redhat-actions/oc-login@v1
 
