--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -84,7 +84,16 @@ jobs:
 
           # Optional - this sets your Kubernetes context's current namespace after logging in.
           namespace: ${{ env.OPENSHIFT_NAMESPACE }}
-       
+          
+          
+  UpdateConfig:
+    runs-on: ubuntu-20.04
+    needs: Login
+    if: ${{ success() }}
+    
+    steps:
+      - uses: actions/checkout@v4
+      
       - name: Test
         run: |
           oc api-resources
