--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,9 +13,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   validar-yaml:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -104,6 +102,8 @@ jobs:
 
   Validate:
     runs-on: ubuntu-latest
+    needs: Login
+    if: ${{ success() }}
     steps:
     
        - uses: actions/checkout@v4 
